<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/id_item1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/id_img1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/home_page_push_investment"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/investment"
                android:layout_toRightOf="@id/id_img1"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/id_item2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/id_img2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/home_page_account"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/account"
                android:layout_toRightOf="@id/id_img2"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/id_item3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/id_img3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/home_page_push_capital"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/capital"
                android:layout_toRightOf="@id/id_img3"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/id_item4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/id_img4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/home_page_push_sign"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/sigin_in"
                android:layout_toRightOf="@id/id_img4"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/id_item5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/id_img5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/home_page_push_invitation"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/invitation"
                android:layout_toRightOf="@id/id_img5"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"/>

        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/id_item6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/id_img6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/home_page_push_more"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/more"
                android:layout_toRightOf="@id/id_img6"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"/>

        </RelativeLayout>


        <TabWidget
            android:visibility="gone"
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="none"
            android:tabStripEnabled="false" />
    </LinearLayout>

</RelativeLayout>